--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": "next/core-web-vitals",
   "plugins": [
-    "import"
+    "import",
+    "tailwindcss"
   ],
   "rules": {
     "indent": [
@@ -37,6 +38,7 @@
         },
         "newlines-between": "never"
       }
-    ]
+    ],
+    "tailwindcss/classnames-order": "warn"
   }
 }
