--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-tailwindcss": "^3.10.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
