--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,10 @@
         "maxBOF": 0
       }
     ],
+    "padded-blocks": [
+      "warn",
+      "never"
+    ],
     "no-unused-vars": "warn",
     "import/newline-after-import": "warn",
     "import/no-duplicates": "warn",
