--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-tailwindcss": "^3.10.0",
