--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "image-palette": "^2.1.0",
     "moment": "^2.29.4",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
